# world_cup

./: .env.example  .gitignore  AI_PROJECT_CONSTRAINTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOY.md  FRONTEND_UI_RULES.md  PREDICTION_PIPELINE_RECOVERY.md  QUICK_START.md  README.md  SNAPSHOT_LEGALITY_AUDIT.md  SNAPSHOT_TRACEABILITY_AUDIT.md  TEAM_PROFILE_HANDOFF_PLAN.md  TEAM_PROFILE_IMPLEMENTATION_REPORT.md  audit_deleted_snapshots.csv  audit_scoring_20260618_155308.json  audit_scoring_20260618_155308.md  audit_scoring_20260618_160151.json  audit_scoring_20260618_160151.md  findings.md  progress.md  start.sh  stop.sh  task_plan.md
backend/: audit_data_integrity.py  audit_query.py  check_db.py  check_match2.py  dashboard.json  decision.json  model-score.json  pyproject.toml  recompute_now.py  seed_divergence.py  seed_injuries.py  seed_p1c2.py  sqlite:
backend/app/: config.py  db.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
backend/reports/: unmapped_exclusions.csv
backend/scripts/: audit_scoring_consistency.py  build_fifa_squad_snapshot.py  build_team_profiles.py  build_venue_climate_baseline.py  calibrate_model.py  check_team_overlap.py  check_upcoming.py  generate_post_match_report.py  lock_pre_match_predictions.py  populate_fifa_rankings.py  recover_pipeline.py  run_model_experiments.py  run_post_match_workflow.py  run_pre_match_workflow.py  show_predictions.py  update_fifa_rankings_2026.py  validate_team_profile_traits.py  verify_24h_profiles.py  verify_api.py  verify_factors.py  verify_full_api.py
backend/tests/: conftest.py  (+51 more)
(+339 files in other folders)
