[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-predictor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic-settings>=2.7,<3",
  "httpx>=0.28,<1",
  "apscheduler>=3.11,<4",
  "numpy>=2.2,<3",
  "scipy>=1.15,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.21",
  "pytest-cov>=6,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

